app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@font-face {
  font-family: 'AltaRegular';
  /* font-style: normal;
  font-weight: 400;  */
  src: url('/fonts/alta-regular.otf') format('opentype');
}

@font-face {
  font-family: 'Helvetica';
  font-style: normal;
  font-weight: 400; 
  src: url('/fonts/Helvetica.ttc') format('truetype');
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Helvetica, Arial, sans-serif;
}

p{
  line-height: 1.2rem;
  margin-bottom: 10px;
}
.text-overlay{
  line-height: 1.7rem;
}
.blur-hover{
  transition-duration: 0.25s;
  background: rgba(0, 0, 0, 0.40);
  backdrop-filter: blur(50px);
}
.font-alta{
  font-family: 'AltaRegular';
}
.font-helvetica{
  font-family: 'Helvetica';
}

